WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
182805
WebCore headers should not be included relatively within dependent projects
https://bugs.webkit.org/show_bug.cgi?id=182805
Summary
WebCore headers should not be included relatively within dependent projects
Don Olmstead
Reported
2018-02-14 13:34:28 PST
Currently there are cases in WebKit WebKitLegacy and the Tools that include WebCore headers using #include "Foo.h" instead of #include <WebCore/Foo.h>.
Attachments
Patch
(13.85 KB, patch)
2018-02-14 13:37 PST
,
Don Olmstead
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Don Olmstead
Comment 1
2018-02-14 13:37:55 PST
Created
attachment 333835
[details]
Patch
WebKit Commit Bot
Comment 2
2018-02-15 10:42:06 PST
Comment on
attachment 333835
[details]
Patch Clearing flags on attachment: 333835 Committed
r228521
: <
https://trac.webkit.org/changeset/228521
>
WebKit Commit Bot
Comment 3
2018-02-15 10:42:08 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2018-02-15 10:43:30 PST
<
rdar://problem/37575051
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug