Tools/WebKitTestRunner/wpe/EventSenderProxyWPE.cpp
@@ -27,9 +27,9 @@
 #include "EventSenderProxy.h"
 
 #include "HeadlessViewBackend.h"
-#include "NotImplemented.h"
 #include "PlatformWebView.h"
 #include "TestController.h"
+#include <WebCore/NotImplemented.h>
 #include <wpe/view-backend.h>
 #include <xkbcommon/xkbcommon-keysyms.h>
 #include <xkbcommon/xkbcommon.h>
